feature-templates/nCino/dataset/01yO3G1U-Product Hierarchy/.store/metadata/objects/LLC_BI__Product_Connection__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Child_Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Product Reference</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Product Connections (Child Product Reference)</relationshipLabel>
        <relationshipName>Product_Connections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this flag for bundles only to mark which products are required in a bundle</description>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product Reference</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Product Connections</relationshipLabel>
        <relationshipName>Product_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Dependency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Use_In_Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to display recommended products in the In-Branch workflow. By default, it is false.</description>
        <inlineHelpText>Select this checkbox to display recommended products in the In-Branch workflow.</inlineHelpText>
        <label>Use In-Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique external identifier.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Connection</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{000000000}</displayFormat>
        <label>Product Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>